// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`the BodySmall component should accept additional props 1`] = `
Array [
  <View
    onLayout={[Function]}
    pointerEvents="box-none"
    style={
      Array [
        Object {
          "bottom": 0,
          "left": 0,
          "overflow": "hidden",
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
        Object {},
      ]
    }
  />,
  <Text
    accessible={false}
    bold={false}
    italic={false}
    style={
      Object {
        "color": "#303030",
        "fontFamily": "InterUI-Regular",
        "fontSize": 12,
        "lineHeight": 18,
      }
    }
  >
    "He who lays up treasures on earth spends his life backing away from his treasures. To him, death is loss. He who lays up treasures in heaven looks forward to eternity; he’s moving daily toward his treasures. To him, death is gain." ― Randy Alcorn
  </Text>,
]
`;

exports[`the BodySmall component should accept and render passed in styles 1`] = `
Array [
  <View
    onLayout={[Function]}
    pointerEvents="box-none"
    style={
      Array [
        Object {
          "bottom": 0,
          "left": 0,
          "overflow": "hidden",
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
        Object {},
      ]
    }
  />,
  <Text
    bold={false}
    italic={false}
    style={
      Object {
        "color": "salmon",
        "fontFamily": "InterUI-Regular",
        "fontSize": 12,
        "lineHeight": 18,
      }
    }
  >
    Smaller salmon text
  </Text>,
]
`;

exports[`the BodySmall component should render a loading state 1`] = `
Array [
  <View
    onLayout={[Function]}
    pointerEvents="box-none"
    style={
      Array [
        Object {
          "bottom": 0,
          "left": 0,
          "overflow": "hidden",
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
        Object {},
      ]
    }
  />,
  <View
    style={
      Object {
        "alignSelf": "stretch",
        "backgroundColor": "#A5A5A5",
        "borderRadius": 16,
        "height": 12,
        "marginVertical": 3,
        "width": "100%",
      }
    }
  />,
]
`;

exports[`the BodySmall component should render as bold 1`] = `
Array [
  <View
    onLayout={[Function]}
    pointerEvents="box-none"
    style={
      Array [
        Object {
          "bottom": 0,
          "left": 0,
          "overflow": "hidden",
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
        Object {},
      ]
    }
  />,
  <Text
    bold={true}
    italic={false}
    style={
      Object {
        "color": "#303030",
        "fontFamily": "InterUI-Bold",
        "fontSize": 12,
        "lineHeight": 18,
      }
    }
  >
    Bold BodySmall text
  </Text>,
]
`;

exports[`the BodySmall component should render as bold italic 1`] = `
Array [
  <View
    onLayout={[Function]}
    pointerEvents="box-none"
    style={
      Array [
        Object {
          "bottom": 0,
          "left": 0,
          "overflow": "hidden",
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
        Object {},
      ]
    }
  />,
  <Text
    bold={true}
    italic={true}
    style={
      Object {
        "color": "#303030",
        "fontFamily": "InterUI-BoldItalic",
        "fontSize": 12,
        "lineHeight": 18,
      }
    }
  >
    Bold italic BodySmall text
  </Text>,
]
`;

exports[`the BodySmall component should render as italic 1`] = `
Array [
  <View
    onLayout={[Function]}
    pointerEvents="box-none"
    style={
      Array [
        Object {
          "bottom": 0,
          "left": 0,
          "overflow": "hidden",
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
        Object {},
      ]
    }
  />,
  <Text
    bold={false}
    italic={true}
    style={
      Object {
        "color": "#303030",
        "fontFamily": "InterUI-Italic",
        "fontSize": 12,
        "lineHeight": 18,
      }
    }
  >
    Italic BodySmall text
  </Text>,
]
`;

exports[`the BodySmall component should render correctly 1`] = `
Array [
  <View
    onLayout={[Function]}
    pointerEvents="box-none"
    style={
      Array [
        Object {
          "bottom": 0,
          "left": 0,
          "overflow": "hidden",
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
        Object {},
      ]
    }
  />,
  <Text
    bold={false}
    italic={false}
    style={
      Object {
        "color": "#303030",
        "fontFamily": "InterUI-Regular",
        "fontSize": 12,
        "lineHeight": 18,
      }
    }
  >
    Default BodySmall text
  </Text>,
]
`;
